--- a/task-2/statistician.ipynb
+++ b/task-2/statistician.ipynb
@@ -53,14 +53,14 @@
     "# XGBoost\n",
     "## Understanding XGBoost\n",
     "\n",
-    "[XGBoost](https://www.geeksforgeeks.org/machine-learning/xgboost/) (eXtreme Gradient Boosting), is a highly optimized gradient boosting model. It has a few features that help it stand out:\n",
+    "XGBoost (eXtreme Gradient Boosting), is a highly optimized gradient boosting model. It has a few features that help it stand out:\n",
     "\n",
     "1. It applies both L1 and L2 regularisation. This helps to prevent overfitting.\n",
     "2. It had built in capabilities to handle missing values, reducing the need for extensive data pre-processing.\n",
     "3. It has built in cross validation features, and you don't need to use any external Python libraries.\n",
     "4. It is very good at parallelization, making it very good for large datasets.\n",
     "\n",
-    "It works by (1) starting with a base learner, (2) calculating loss, (3) train the next tree on the basis of the errors of the first tree, (4) repeat."
+    "It works by (1) starting with a base learner, (2) calculating loss, (3) train the next tree on the basis of the errors of the first tree, (4) repeat. This is well explained on [G4G](https://www.geeksforgeeks.org/machine-learning/xgboost/) and the original [XGBoost paper - Chen et al., 2016](https://arxiv.org/pdf/1603.02754)"
    ]
   },
   {
