semanticist results and visuals

--- a/task-2/semanticist.ipynb
+++ b/task-2/semanticist.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bd8d2a81",
    "metadata": {},
    "outputs": [
@@ -476,6 +476,205 @@
     "    print(f\"Saved {len(category_misclassified)} files to {filename}\")\n",
     "\n",
     "print(f\"\\nTotal: {total_saved} misclassified text files saved to {output_dir}/\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "859965a7",
+   "metadata": {},
+   "source": [
+    "# Results\n",
+    "\n",
+    "Class 1 vs Class 2 reports 97.46% accuracy.\n",
+    "Class 1 vs Class 3 reports 95.91% accuracy.\n",
+    "\n",
+    "This is amazing accuracy... The semanticist is far outperforming the statistician, and it is clear that Word2Vec is able to clearly depict the nuance of human vs AI texts.\n",
+    "\n",
+    "Now, I'll try to analyse how / why I got these findings.\n",
+    "\n",
+    "\n",
+    "## What We Found\n",
+    "The semanticist significantly outperformed the statistician. Even though the AI can count commas and mimic sentence lengths, it fails to fake the semantics which humans are able to uniquely author.\n",
+    "\n",
+    "Detecting class-2 was v easy. The model saw that the AI stuck to very safe, average word choices (low variance). The Human author used concrete, specific nouns, while the Generic AI used broader, more predictable language. \n",
+    "\n",
+    "It detected class-3 quite easily as well, showing that despite good prompt engineering, the semantic structures are still quite different.\n",
+    "\n",
+    "# Visualising the vector space\n",
+    "\n",
+    "I now want to see how the classes are visualised in the multi-dimensional vector space. Since it is impossible for us to envision a 4th dimension, let alone the 300th, I will use a technique called dimensionality reduction. Dimensionality reduction uses PCA to preserve the overall structure, while still keeping vectors close to vectors that they should be close to in the new 3D vector space. This can be done using using scikitlearn's PCA library. We also use it's t-SNE library, which is good for preserving local clusters and seeing neighbourss."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "db9deb4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reducing 300 dimensions to 3 dimensions using PCA...\n",
+      "Original shape: (785, 300) (785 paragraphs × 300 dimensions)\n",
+      "Reduced shape: (785, 3) (785 paragraphs × 3 dimensions)\n",
+      "Variance explained by 3 components: 28.82%\n",
+      "\n",
+      "Ready to visualize! The 300D semantic space has been compressed to 3D.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D \n",
+    "from sklearn.decomposition import PCA\n",
+    "import pandas as pd\n",
+    "\n",
+    "# This is where we use the 300-dimensional vector embeddings from earlier!\n",
+    "# X_test contains the averaged Word2Vec embeddings for each test paragraph\n",
+    "print(\"Reducing 300 dimensions to 3 dimensions using PCA...\")\n",
+    "print(f\"Original shape: {X_test.shape} (785 paragraphs × 300 dimensions)\")\n",
+    "\n",
+    "pca = PCA(n_components=3)\n",
+    "X_3d = pca.fit_transform(X_test)\n",
+    "\n",
+    "print(f\"Reduced shape: {X_3d.shape} (785 paragraphs × 3 dimensions)\")\n",
+    "print(f\"Variance explained by 3 components: {sum(pca.explained_variance_ratio_):.2%}\")\n",
+    "\n",
+    "# Create dataframe for visualization\n",
+    "viz_df = pd.DataFrame(data=X_3d, columns=['PC1', 'PC2', 'PC3'])\n",
+    "viz_df['Label'] = y_test  # The actual class labels (0, 1, or 2)\n",
+    "label_map = {0: 'Human', 1: 'Generic AI', 2: 'Mimic AI'}\n",
+    "viz_df['Class'] = viz_df['Label'].map(label_map)\n",
+    "\n",
+    "print(\"\\nReady to visualize! The 300D semantic space has been compressed to 3D.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2121a989",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All classes visualization saved\n",
+      "Class 1 (Human) visualization saved\n",
+      "Class 2 (Generic AI) visualization saved\n",
+      "Class 3 (Mimic AI) visualization saved\n",
+      "\n",
+      "All visualizations saved to semanticist-visuals/ directory!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import plotly.express as px\n",
+    "import os\n",
+    "\n",
+    "os.makedirs('semanticist-visuals', exist_ok=True)\n",
+    "\n",
+    "color_map = {\n",
+    "    'Human': '#1f77b4',\n",
+    "    'Generic AI': '#ff7f0e',\n",
+    "    'Mimic AI': '#2ca02c'\n",
+    "}\n",
+    "\n",
+    "fig_all = px.scatter_3d(\n",
+    "    viz_df,\n",
+    "    x='PC1',\n",
+    "    y='PC2',\n",
+    "    z='PC3',\n",
+    "    color='Class',\n",
+    "    color_discrete_map=color_map,\n",
+    "    title='All 3 Classes - Interactive 3D Semantic Space',\n",
+    "    labels={'PC1': 'PC 1', 'PC2': 'PC 2', 'PC3': 'PC 3'},\n",
+    "    opacity=0.6,\n",
+    "    height=800\n",
+    ")\n",
+    "fig_all.update_traces(marker=dict(size=4))\n",
+    "fig_all.update_layout(\n",
+    "    scene=dict(xaxis_title='PC 1', yaxis_title='PC 2', zaxis_title='PC 3'),\n",
+    "    font=dict(size=12)\n",
+    ")\n",
+    "fig_all.write_html('semanticist-visuals/all_classes.html')\n",
+    "print(\"All classes visualization saved\")\n",
+    "\n",
+    "viz_class1 = viz_df[viz_df['Class'] == 'Human']\n",
+    "fig_class1 = px.scatter_3d(\n",
+    "    viz_class1,\n",
+    "    x='PC1',\n",
+    "    y='PC2',\n",
+    "    z='PC3',\n",
+    "    title='Class 1: Human-Written Text Only',\n",
+    "    labels={'PC1': 'PC 1', 'PC2': 'PC 2', 'PC3': 'PC 3'},\n",
+    "    opacity=0.6,\n",
+    "    height=800\n",
+    ")\n",
+    "fig_class1.update_traces(marker=dict(size=4, color=color_map['Human']))\n",
+    "fig_class1.update_layout(\n",
+    "    scene=dict(xaxis_title='PC 1', yaxis_title='PC 2', zaxis_title='PC 3'),\n",
+    "    font=dict(size=12)\n",
+    ")\n",
+    "fig_class1.write_html('semanticist-visuals/class1_human.html')\n",
+    "print(\"Class 1 (Human) visualization saved\")\n",
+    "\n",
+    "viz_class2 = viz_df[viz_df['Class'] == 'Generic AI']\n",
+    "fig_class2 = px.scatter_3d(\n",
+    "    viz_class2,\n",
+    "    x='PC1',\n",
+    "    y='PC2',\n",
+    "    z='PC3',\n",
+    "    title='Class 2: Generic AI-Generated Text Only',\n",
+    "    labels={'PC1': 'PC 1', 'PC2': 'PC 2', 'PC3': 'PC 3'},\n",
+    "    opacity=0.6,\n",
+    "    height=800\n",
+    ")\n",
+    "fig_class2.update_traces(marker=dict(size=4, color=color_map['Generic AI']))\n",
+    "fig_class2.update_layout(\n",
+    "    scene=dict(xaxis_title='PC 1', yaxis_title='PC 2', zaxis_title='PC 3'),\n",
+    "    font=dict(size=12)\n",
+    ")\n",
+    "fig_class2.write_html('semanticist-visuals/class2_generic_ai.html')\n",
+    "print(\"Class 2 (Generic AI) visualization saved\")\n",
+    "\n",
+    "viz_class3 = viz_df[viz_df['Class'] == 'Mimic AI']\n",
+    "fig_class3 = px.scatter_3d(\n",
+    "    viz_class3,\n",
+    "    x='PC1',\n",
+    "    y='PC2',\n",
+    "    z='PC3',\n",
+    "    title='Class 3: AI-Mimicry Text Only',\n",
+    "    labels={'PC1': 'PC 1', 'PC2': 'PC 2', 'PC3': 'PC 3'},\n",
+    "    opacity=0.6,\n",
+    "    height=800\n",
+    ")\n",
+    "fig_class3.update_traces(marker=dict(size=4, color=color_map['Mimic AI']))\n",
+    "fig_class3.update_layout(\n",
+    "    scene=dict(xaxis_title='PC 1', yaxis_title='PC 2', zaxis_title='PC 3'),\n",
+    "    font=dict(size=12)\n",
+    ")\n",
+    "fig_class3.write_html('semanticist-visuals/class3_mimic_ai.html')\n",
+    "print(\"Class 3 (Mimic AI) visualization saved\")\n",
+    "\n",
+    "print(\"\\nAll visualizations saved to semanticist-visuals/ directory!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "545a2246",
+   "metadata": {},
+   "source": [
+    "~ visualisation codes generated by Claude Sonnet 4.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3681ee8b",
+   "metadata": {},
+   "source": [
+    "If anything, this just shows us why 3-dimensions would not have been good enough imo"
    ]
   }
  ],
