--- a/task-2/statistician.ipynb
+++ b/task-2/statistician.ipynb
@@ -30,7 +30,7 @@
     "| | Double Quotes | Dialogue/citation | **Highest** | Lower | Lower | Yes | Humans use dialogue/quotes more naturally |\n",
     "| **IV. Readability** | Flesch-Kincaid Grade | Reading difficulty (mean) | 9th grade | 7th grade | 11th grade | Yes | AI writes simpler; mimicry over-corrects to harder |\n",
     "| | Flesch-Kincaid (variance) | Consistency | **High** (σ ≈ 7) | Very low (σ ≈ 2) | Very low (σ ≈ 2) | Yes | AI maintains constant difficulty; humans modulate |\n",
-    "| **V. Information Theory** | Perplexity (GPT-2) | Predictability | Higher | Lower | Mid | Yes | AI-generated text is more predictable to language models |"
+    "| **V. Information Theory** | Perplexity (GPT-2) | Predictability | Higher | Lower | Mid | N/A | AI-generated text is more predictable to language models |"
    ]
   },
   {
