--- a/task-2/transformer.ipynb
+++ b/task-2/transformer.ipynb
@@ -846,7 +846,7 @@
     "\n",
     "**Conclusion:** The intelligence is entirely contained in the adapter. The base model has no idea what \"style\" is until we plug our file in.\n",
     "\n",
-    "#### 2. Checkpoint evolution. *Did it progress?*\n",
+    "#### 2. *Did it progress?*\n",
     "We checked how the model's confidence on a hard \"Mimic\" sentence grew over time to ensure it wasn't just instantly memorizing the answer.\n",
     "\n",
     "* **Step 196:** 89.8% confidence.\n",
@@ -855,11 +855,11 @@
     "\n",
     "**Conclusion:** There is a learning curve. The model progressively refined its understanding of the nuances rather than comign directly to 100% immediately. \n",
     "\n",
-    "#### 3. The Weight Autopsy\n",
+    "#### 3. Checking Weights\n",
     "We inspected the raw `adapter_model.safetensors` file to ensure the training actually wrote complex patterns.\n",
     "\n",
     "* **Standard Deviation:** `0.0019`\n",
-    "* **Status:** Healthy.\n",
+    "* **Status:** Normal. I read that typically the standard deviation in weights should be between 0.01 and 0.1 (towards the lower end of that is better), so this works\n",
     "\n",
     "**Conclusion:** The file contains distinct, varied weights, proving the model successfully learned a complex mathematical representation of the author's style."
    ]
