--- a/task-2/statistician/statistician.ipynb
+++ b/task-2/statistician/statistician.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "883d8a34",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dcaee41a",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "b6e03329",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "37d998ce",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('../task-1/math.csv')\n",
+    "df = pd.read_csv('../../task-1/math.csv')\n",
     "\n",
     "# First, let's check what columns we have\n",
     "print(\"Available columns:\", df.columns.tolist())\n",
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "447c577e",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "76c3b94a",
    "metadata": {},
    "outputs": [
