minor change in script

--- a/task-3/task-3.ipynb
+++ b/task-3/task-3.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c91be408",
    "metadata": {},
    "outputs": [
@@ -922,7 +922,7 @@
     "    target_cls = target_classes[i]\n",
     "    print(f\"Processing {name}...\")\n",
     "\n",
-    "    # VISUALIZATION 1: WATERFALL PLOT \n",
+    "    # VISUALIZATION 1: WATERFALL PLOT (The Logic)\n",
     "    # Shows the Top ~12 words that pushed the score up or down\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    shap.plots.waterfall(\n",
@@ -935,7 +935,7 @@
     "    plt.savefig(os.path.join(OUTPUT_DIR, f\"{name}_waterfall.png\"))\n",
     "    plt.close()\n",
     "\n",
-    "    # VISUALIZATION 2: BAR CHART\n",
+    "    # VISUALIZATION 2: BAR CHART (The Summary)\n",
     "    # Shows global importance of features for this sample\n",
     "    # Fix: Create proper Explanation object with feature names\n",
     "    try:\n",
@@ -982,17 +982,40 @@
     "        plt.savefig(os.path.join(OUTPUT_DIR, f\"{name}_bar.png\"))\n",
     "        plt.close()\n",
     "\n",
-    "    # VISUALIZATION 3: TEXT HEATMAP \n",
+    "    # VISUALIZATION 3: TEXT HEATMAP (The Context)\n",
     "    # Shows the text with Red/Blue highlights\n",
     "    # We save this as HTML because it is interactive\n",
     "    try:\n",
-    "        heatmap_html = shap.plots.text(\n",
+    "        # SHAP returns raw SVG, so we wrap it in proper HTML\n",
+    "        svg_content = shap.plots.text(\n",
     "            shap_values[i, :, target_cls], \n",
     "            display=False\n",
     "        )\n",
     "        \n",
+    "        # Wrap the SVG in proper HTML structure\n",
+    "        html_content = f\"\"\"<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "    <meta charset=\"UTF-8\">\n",
+    "    <title>{name}</title>\n",
+    "    <style>\n",
+    "        body {{\n",
+    "            margin: 20px;\n",
+    "            font-family: Arial, sans-serif;\n",
+    "        }}\n",
+    "        h1 {{\n",
+    "            color: #333;\n",
+    "        }}\n",
+    "    </style>\n",
+    "</head>\n",
+    "<body>\n",
+    "    <h1>{name.replace('_', ' ')}</h1>\n",
+    "    {svg_content}\n",
+    "</body>\n",
+    "</html>\"\"\"\n",
+    "        \n",
     "        with open(os.path.join(OUTPUT_DIR, f\"{name}_heatmap.html\"), \"w\", encoding='utf-8') as f:\n",
-    "            f.write(heatmap_html)\n",
+    "            f.write(html_content)\n",
     "    except Exception as e:\n",
     "        print(f\"  Using custom heatmap for {name} (SHAP error: {e})\")\n",
     "        \n",
@@ -1001,9 +1024,28 @@
     "        tokens = shap_values.feature_names\n",
     "        max_abs = max(abs(shap_vals)) if len(shap_vals) > 0 else 1\n",
     "        \n",
-    "        html = f\"<html><head><title>{name}</title></head><body>\"\n",
-    "        html += f\"<h2>{name}</h2>\"\n",
-    "        html += \"<p style='font-family: monospace; line-height: 2;'>\"\n",
+    "        html = f\"\"\"<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "    <meta charset=\"UTF-8\">\n",
+    "    <title>{name}</title>\n",
+    "    <style>\n",
+    "        body {{\n",
+    "            margin: 20px;\n",
+    "            font-family: Arial, sans-serif;\n",
+    "        }}\n",
+    "        h1 {{\n",
+    "            color: #333;\n",
+    "        }}\n",
+    "        .text-container {{\n",
+    "            font-family: monospace;\n",
+    "            line-height: 2;\n",
+    "        }}\n",
+    "    </style>\n",
+    "</head>\n",
+    "<body>\n",
+    "    <h1>{name.replace('_', ' ')}</h1>\n",
+    "    <div class=\"text-container\">\"\"\"\n",
     "        \n",
     "        for token, val in zip(tokens, shap_vals):\n",
     "            # Color based on SHAP value\n",
@@ -1016,7 +1058,10 @@
     "            \n",
     "            html += f\"<span style='background-color: {color}; padding: 2px;'>{token}</span> \"\n",
     "        \n",
-    "        html += \"</p></body></html>\"\n",
+    "        html += \"\"\"\n",
+    "    </div>\n",
+    "</body>\n",
+    "</html>\"\"\"\n",
     "        \n",
     "        with open(os.path.join(OUTPUT_DIR, f\"{name}_heatmap.html\"), \"w\", encoding='utf-8') as f:\n",
     "            f.write(html)\n",
