fix: numbering issue

--- a/task-3/task-3.ipynb
+++ b/task-3/task-3.ipynb
@@ -253,10 +253,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c91be408",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/samarth/Documents/precog-task/human-or-ai/venv3/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -268,19 +276,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading weights: 100%|██████████| 100/100 [00:00<00:00, 260.14it/s, Materializing param=distilbert.transformer.layer.5.sa_layer_norm.weight]\n",
+      "Loading weights: 100%|██████████| 100/100 [00:00<00:00, 1097.45it/s, Materializing param=distilbert.transformer.layer.5.sa_layer_norm.weight]   \n",
       "DistilBertForSequenceClassification LOAD REPORT from: distilbert-base-uncased\n",
       "Key                     | Status     | \n",
       "------------------------+------------+-\n",
+      "vocab_layer_norm.bias   | UNEXPECTED | \n",
       "vocab_projector.bias    | UNEXPECTED | \n",
       "vocab_transform.weight  | UNEXPECTED | \n",
-      "vocab_transform.bias    | UNEXPECTED | \n",
-      "vocab_layer_norm.bias   | UNEXPECTED | \n",
       "vocab_layer_norm.weight | UNEXPECTED | \n",
+      "vocab_transform.bias    | UNEXPECTED | \n",
       "pre_classifier.bias     | MISSING    | \n",
-      "classifier.weight       | MISSING    | \n",
       "pre_classifier.weight   | MISSING    | \n",
       "classifier.bias         | MISSING    | \n",
+      "classifier.weight       | MISSING    | \n",
       "\n",
       "Notes:\n",
       "- UNEXPECTED\t:can be ignored when loading from different task/architecture; not ok if you expect identical arch.\n",
@@ -299,454 +307,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "\u001b[A\n",
-      "PartitionExplainer explainer: 10it [03:52, 25.88s/it]\n"
+      "PartitionExplainer explainer: 10it [03:35, 23.95s/it]                      \n"
      ]
     },
     {
@@ -754,15 +315,15 @@
      "output_type": "stream",
      "text": [
       "GENERATING 3 VISUALIZATIONS PER SAMPLE\n",
-      "Processing Class_0_Human_Sample_1...\n",
-      "  Using custom bar plot for Class_0_Human_Sample_1 (SHAP error: list index out of range)\n"
+      "Processing Class_1_Human_Sample_1...\n",
+      "  Using custom bar plot for Class_1_Human_Sample_1 (SHAP error: list index out of range)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_7011/1405637352.py:143: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all Axes decorations.\n",
+      "/tmp/ipykernel_7049/1869846322.py:143: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all Axes decorations.\n",
       "  plt.tight_layout()\n"
      ]
     },
@@ -770,17 +331,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing Class_0_Human_Sample_2...\n",
-      "  Using custom bar plot for Class_0_Human_Sample_2 (SHAP error: list index out of range)\n",
-      "Processing Class_0_Human_Sample_3...\n",
-      "  Using custom bar plot for Class_0_Human_Sample_3 (SHAP error: list index out of range)\n"
+      "Processing Class_1_Human_Sample_2...\n",
+      "  Using custom bar plot for Class_1_Human_Sample_2 (SHAP error: list index out of range)\n",
+      "Processing Class_1_Human_Sample_3...\n",
+      "  Using custom bar plot for Class_1_Human_Sample_3 (SHAP error: list index out of range)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_7011/1405637352.py:143: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all Axes decorations.\n",
+      "/tmp/ipykernel_7049/1869846322.py:143: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all Axes decorations.\n",
       "  plt.tight_layout()\n"
      ]
     },
@@ -788,38 +349,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing Class_1_Generic_AI_Sample_1...\n",
-      "  Using custom bar plot for Class_1_Generic_AI_Sample_1 (SHAP error: list index out of range)\n",
-      "Processing Class_1_Generic_AI_Sample_2...\n",
-      "  Using custom bar plot for Class_1_Generic_AI_Sample_2 (SHAP error: list index out of range)\n",
-      "Processing Class_1_Generic_AI_Sample_3...\n",
-      "  Using custom bar plot for Class_1_Generic_AI_Sample_3 (SHAP error: list index out of range)\n",
-      "Processing Class_2_Mimic_AI_Sample_1...\n",
-      "  Using custom bar plot for Class_2_Mimic_AI_Sample_1 (SHAP error: list index out of range)\n",
-      "Processing Class_2_Mimic_AI_Sample_2...\n"
+      "Processing Class_2_Generic_AI_Sample_1...\n",
+      "  Using custom bar plot for Class_2_Generic_AI_Sample_1 (SHAP error: list index out of range)\n",
+      "Processing Class_2_Generic_AI_Sample_2...\n",
+      "  Using custom bar plot for Class_2_Generic_AI_Sample_2 (SHAP error: list index out of range)\n",
+      "Processing Class_2_Generic_AI_Sample_3...\n",
+      "  Using custom bar plot for Class_2_Generic_AI_Sample_3 (SHAP error: list index out of range)\n",
+      "Processing Class_3_Mimic_AI_Sample_1...\n",
+      "  Using custom bar plot for Class_3_Mimic_AI_Sample_1 (SHAP error: list index out of range)\n",
+      "Processing Class_3_Mimic_AI_Sample_2...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_7011/1405637352.py:143: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all Axes decorations.\n",
-      "  plt.tight_layout()\n",
-      "                                                 \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Using custom bar plot for Class_2_Mimic_AI_Sample_2 (SHAP error: can only concatenate str (not \"list\") to str)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_7011/1405637352.py:143: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all Axes decorations.\n",
+      "/tmp/ipykernel_7049/1869846322.py:143: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all Axes decorations.\n",
       "  plt.tight_layout()\n"
      ]
     },
@@ -827,12 +372,108 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing Class_2_Mimic_AI_Sample_3...\n",
-      "  Using custom bar plot for Class_2_Mimic_AI_Sample_3 (SHAP error: list index out of range)\n",
+      "  Using custom bar plot for Class_3_Mimic_AI_Sample_2 (SHAP error: can only concatenate str (not \"list\") to str)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_7049/1869846322.py:143: UserWarning: Tight layout not applied. The left and right margins cannot be made large enough to accommodate all Axes decorations.\n",
+      "  plt.tight_layout()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing Class_3_Mimic_AI_Sample_3...\n",
+      "  Using custom bar plot for Class_3_Mimic_AI_Sample_3 (SHAP error: list index out of range)\n",
       "\n",
       "ANALYSIS COMPLETE!\n",
       "Check the 'low_confidence_analysis' folder for your .png and .html files.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1000x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -909,7 +550,7 @@
     "        texts_to_explain.append(sample['text'])\n",
     "        # We want to visualize the TRUE class to see why confidence was low\n",
     "        target_classes.append(label) \n",
-    "        sample_names.append(f\"Class_{label}_{class_name}_Sample_{idx+1}\")\n",
+    "        sample_names.append(f\"Class_{label+1}_{class_name}_Sample_{idx+1}\")\n",
     "\n",
     "# Calculate SHAP values (might take a minute)\n",
     "shap_values = explainer(texts_to_explain)\n",
@@ -930,7 +571,7 @@
     "        max_display=12, \n",
     "        show=False\n",
     "    )\n",
-    "    plt.title(f\"{name}: Why class {target_cls}?\", fontsize=14)\n",
+    "    plt.title(f\"{name}: Why class {target_cls+1}?\", fontsize=14)\n",
     "    plt.tight_layout()\n",
     "    plt.savefig(os.path.join(OUTPUT_DIR, f\"{name}_waterfall.png\"))\n",
     "    plt.close()\n",
